--- a/security-oauth/src/main/resources/application.yml
+++ b/security-oauth/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     password: 123456
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     show-sql: false
     properties:
       hibernate:
