--- a/security-oauth/src/main/resources/application.yml
+++ b/security-oauth/src/main/resources/application.yml
@@ -3,13 +3,13 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/oauth2_test?useSSL=false
+    url: jdbc:mysql://localhost:3307/oauth2_test
     username: root
     password: 123456
   jpa:
     hibernate:
       ddl-auto: none
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
@@ -52,6 +52,7 @@ app:
     jwt-secret: phuongchu12313123131332131321321321313131312313
     jwt-expiration: 10800000 #1000*60*60*3
     jwt-refresh-token-expiration: 43200000 #1000*60*60*12
+    token-prefix: "Bearer "
     jwt-cookie-name: phuongchu
 cor:
   allow-origin: http://localhost:8080, https://localhost:8088
