--- a/security-oauth/src/main/resources/application.yml
+++ b/security-oauth/src/main/resources/application.yml
@@ -17,17 +17,17 @@ spring:
     redis:
       host: localhost
       port: 6379
-#  security:
-#    oauth2:
-#      client:
-#        registration:
-#          google:
-#            client-id:
-#            client-secret:
-#            redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
-#            scope:
-#              - email
-#              - profile
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 727932446413-vu041svt85linh1q772j4825tgcehqqr.apps.googleusercontent.com
+            client-secret: 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
+            redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
+            scope:
+              - email
+              - profile
 #          facebook:
 #            client-id:
 #            client-secret:
@@ -57,8 +57,10 @@ app:
   cookie:
     cookie-name: phuongchu
 cor:
-  allow-origin: http://localhost:8080, https://localhost:8088
+  allow-origin: http://localhost:8889, https://localhost:3000
   allow-method: POST, GET, PUT, DELETE
   allow-credentials: true
+oauth2:
+  authorizedRedirectUris: http://localhost:3000/oauth2/redirect, myandroidapp://oauth2/redirect, myiosapp://oauth2/redirect
 
 
