update active account by email

--- a/security-oauth/pom.xml
+++ b/security-oauth/pom.xml
@@ -147,6 +147,11 @@
 			<version>1.16.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>dev.samstevens.totp</groupId>
+			<artifactId>totp</artifactId>
+			<version>1.7.1</version>
+		</dependency>
 
 
 	</dependencies>
